<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_info"
            android:icon="@mipmap/ic_nav_user_info"
            android:title="@string/home_nav_user_info" />
        <item
            android:id="@+id/nav_company_manage"
            android:icon="@mipmap/ic_nav_company_manage"
            android:title="@string/home_nav_company_manage" />
        <item
            android:id="@+id/nav_permission_manager"
            android:icon="@mipmap/ic_nav_permission_manager"
            android:title="@string/home_nav_permission_manager" />
        <item
            android:id="@+id/nav_mod_pwd"
            android:icon="@mipmap/ic_nav_mod_pwd"
            android:title="@string/home_nav_mod_pwd" />
        <item
            android:id="@+id/nav_version_update"
            android:icon="@mipmap/ic_nav_version_update"
            android:title="@string/home_nav_version_update" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_nav_logout"
            android:title="@string/home_nav_logout" />
    </group>

    <!--<item android:title="@string/home_more">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/navCode"-->
                <!--android:icon="@drawable/ic_code"-->
                <!--android:title="@string/codekk_title" />-->
            <!--<item-->
                <!--android:id="@+id/navMovie"-->
                <!--android:icon="@drawable/ic_movie"-->
                <!--android:title="@string/dytt_title" />-->
            <!--<item-->
                <!--android:id="@+id/navTing56"-->
                <!--android:icon="@drawable/ic_ting_56"-->
                <!--android:title="@string/ting56_title" />-->
        <!--</menu>-->
    <!--</item>-->

    <!--<item android:title="@string/home_other">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/navSetting"-->
                <!--android:icon="@drawable/ic_setting"-->
                <!--android:title="@string/setting_title" />-->
            <!--<item-->
                <!--android:id="@+id/navExit"-->
                <!--android:icon="@drawable/ic_exit"-->
                <!--android:title="@string/home_exit_app" />-->
        <!--</menu>-->
    <!--</item>-->
</menu>